# RayTracer

./: .gitignore  .gitmodules  CMakeLists.txt
lib/x86-64/SFML-2.5.1/doc/html/: Socket_8hpp_source.html  classsf_1_1Clock.html  classsf_1_1Ftp_1_1DirectoryResponse.html  classsf_1_1Ftp_1_1ListingResponse.html  classsf_1_1Ftp_1_1Response.html  classsf_1_1RenderTarget.html  classsf_1_1RenderTexture.html  classsf_1_1RenderWindow.html  classsf_1_1Socket.html  classsf_1_1SocketSelector.html  classsf_1_1TcpListener.html  classsf_1_1TcpSocket.html  classsf_1_1UdpSocket.html
lib/x86-64/SFML-2.5.1/include/SFML/Graphics/: Font.hpp  RenderTarget.hpp
lib/x86-64/SFML-2.5.1/include/SFML/System/: Clock.hpp
src/: cornell_box.h  main.cpp
src/geometry/: arraybase.h  point.h  ray.h  sphere.h  triangle.h  vector.h
src/light/: point.h
src/material/: complex.h  diffuse.h  spectral.h  specular.h
src/rendering/: direct_renderer.h  framebuffer.h  pixel_renderer.h  ray_generator.h  ray_sampler.h  render.h  render_pool.h
src/scene/: TriangleModel.h  camera.h  scene.h
